added array algorithm and variables algorithm

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@
 hs_err_pid*
 .idea/
 target/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+python/__pycache__/
+src/main/resources/
